samples/_failures_safe/1761696185_ccdd83_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4e600251.c:140:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  140 | int main
      | ^~~
